--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.0.15",
+    "@react-google-maps/api": "^2.19.2",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
