--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@calcom/embed-react": "^1.3.2",
     "@phosphor-icons/react": "^2.0.15",
     "@react-google-maps/api": "^2.19.2",
     "next": "14.0.4",
@@ -17,7 +18,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.23.6",
-    "@rocketseat/eslint-config": "^2.1.0",
+    "@rocketseat/eslint-config": "^2.2.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -25,7 +26,9 @@
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
     "postcss": "^8.4.32",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.3.6",
-    "typescript": "^5"
+    "typescript": "5.1.3"
   }
 }
